# Doom-Renderer

./: .gitignore  CMakeLists.txt  C_Input.cpp  C_Input.h  Color.cpp  Color.h  CoordinateTransformer.cpp  CoordinateTransformer.h  Doom Rendering.sln  Doom Rendering.vcxproj  Doom Rendering.vcxproj.filters  DoomWorldLoader.cpp  DoomWorldLoader.h  Matrix3.cpp  Matrix3.h  PixelBuffer.h  README.md  Statsman.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Triangle.cpp  Triangle.h  Vec.h  ZBuffer.cpp  ZBuffer.h  helpers.h  main.cpp
RelLegacy/data/: TEXTURES_DOOM2.txt  sky_textures.txt
docs/: Backface culling.md  Controls.md
src/: AssetLoader.cpp  AssetLoader.h  C_Input.cpp  C_Input.h  Camera.h  Color.cpp  Color.h  CoordinateTransformer.cpp  CoordinateTransformer.h  DoomMap.cpp  DoomMap.h  DoomStructs.h  DoomWorldLoader.cpp  DoomWorldLoader.h  EnumclassHelper.h  FloatColorBuffer.cpp  FloatColorBuffer.h  FloatPack.h  FloatPack16.h  FloatPack8.h  IntPack16.cpp  IntPack16.h  KeepApartVector.h  Lehmer.cpp  Lehmer.h  Mask16.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Model.cpp  Model.h  PerformanceMonitor.cpp  PerformanceMonitor.h  PixelBuffer.h  PointLight.cpp  PointLight.h  Polygon.cpp  Polygon.h  PolygonBitmap.cpp  (+36 more)
src/GameStates/: BenchmarkState.cpp  BenchmarkState.h  GameStateBase.cpp  GameStateBase.h  MainGame.cpp  MainGame.h
src/Renderers/: RasterizationRenderer.cpp  RasterizationRenderer.h  RendererBase.cpp  RendererBase.h
src/bob/: SSE_Vec4.h  Timer.h  Vec2.h  Vec3.h
src/misc/: Enums.h  GameSettings.h
src/shaders/: DepthTextureRenderShader.cpp  DepthTextureRenderShader.h  MainFragmentRenderShader.cpp  MainFragmentRenderShader.h  MainFragmentRenderingShader.cpp  MainFragmentRenderingShader.h  ShaderBase.h  VertexTransformerShader.cpp  VertexTransformerShader.h
test_maps/: CONCAVE.wad  HEXAGON.wad  LETTERS.wad  RECT.wad  STUPID.wad
